# tafver-metars

./: .bumpversion.cfg  .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: cd.yml  ci.yml
tafver_metars/: __main__.py  console.py  download.py  exceptions.py  logger.py  sanitize.py
tests/: test_tafver_metars.py
